--- a/RagdollCannon/RagdollCannon.csproj
+++ b/RagdollCannon/RagdollCannon.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4595DD5C-DB5B-478F-A690-F99772EAE8F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RagdollCanon</RootNamespace>
-    <AssemblyName>RagdollCanon</AssemblyName>
+    <RootNamespace>RagdollCannon</RootNamespace>
+    <AssemblyName>RagdollCannon</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -64,7 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RagdollCanon.cs" />
+    <Compile Include="RagdollCannon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
