--- a/Randomizer/thunderstore/manifest.json
+++ b/Randomizer/thunderstore/manifest.json
@@ -3,5 +3,5 @@
     "version_number": "1.1.2",
     "website_url": "https://github.com/exp111/OutwardStuff",
     "description": "Randomizes item drops, merchant inventories and enemy weapons.",
-    "dependencies": ["BepInEx-BepInExPack_Outward-5.4.18"]
+    "dependencies": ["BepInEx-BepInExPack_Outward-5.4.18", "sinai-dev-SideLoader-3.7.14"]
 }
