--- a/MoreChatCommands/MoreChatCommands.csproj
+++ b/MoreChatCommands/MoreChatCommands.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -27,7 +28,8 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -260,6 +262,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Clear.cs" />
+    <Compile Include="Commands\Skill.cs" />
     <Compile Include="Commands\Time.cs" />
     <Compile Include="CustomDebugCmd.cs" />
     <Compile Include="Commands\Give.cs" />
