--- a/Mounts/Mounts.csproj
+++ b/Mounts/Mounts.csproj
@@ -291,6 +291,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom SL Effect\SL_DespawnMount.cs" />
+    <Compile Include="Custom SL Effect\SL_SpawnMount.cs" />
+    <Compile Include="Custom SL Effect\SL_IsMounted.cs" />
     <Compile Include="Custom SL Effect\SL_ToggleMount.cs" />
     <Compile Include="DialogueCharacter.cs" />
     <Compile Include="Mounts.cs" />
