--- a/Mounts/Mounts.csproj
+++ b/Mounts/Mounts.csproj
@@ -291,6 +291,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom SL Effect\SL_ShowNotificationLoc.cs" />
     <Compile Include="Custom SL Effect\SL_DespawnMount.cs" />
     <Compile Include="Custom SL Effect\SL_SpawnMount.cs" />
     <Compile Include="Custom SL Effect\SL_IsMounted.cs" />
