-Dialogue Dumper (its shit, read from files instead) -No Time Limits work (need to filter the events)

--- a/QuestGraphDumper/GraphDumper.csproj
+++ b/QuestGraphDumper/GraphDumper.csproj
@@ -278,7 +278,7 @@
   <ItemGroup>
     <Compile Include="Graph.cs" />
     <Compile Include="Patches.cs" />
-    <Compile Include="QuestGraphDumper.cs" />
+    <Compile Include="GraphDumper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
