--- a/Tutorial/packages.config
+++ b/Tutorial/packages.config
@@ -3,6 +3,7 @@
   <package id="BepInEx.BaseLib" version="5.4.19" targetFramework="net472" />
   <package id="HarmonyX" version="2.8.0" targetFramework="net472" />
   <package id="Mono.Cecil" version="0.11.4" targetFramework="net472" />
+  <package id="Mono.Unofficial.pdb2mdb" version="4.2.3.4" targetFramework="net472" />
   <package id="MonoMod.RuntimeDetour" version="22.1.4.3" targetFramework="net472" />
   <package id="MonoMod.Utils" version="22.1.4.3" targetFramework="net472" />
   <package id="Outward.GameLibs" version="2022.5.18-r.0" targetFramework="net472" />
